--- a/features/times/src/main/res/layout/vakit_notprefs.xml
+++ b/features/times/src/main/res/layout/vakit_notprefs.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background2"
+    android:background="@color/backgroundSecondary"
     android:paddingBottom="8dp"
     android:paddingTop="8dp"
     tools:context="com.metinkale.prayer.times.fragments.AlarmsFragment" />
