--- a/features/base/src/main/res/drawable/shadow.xml
+++ b/features/base/src/main/res/drawable/shadow.xml
@@ -21,7 +21,7 @@
         android:angle="90"
         android:centerX="50%"
         android:centerY="50%"
-        android:endColor="#00000000"
+        android:endColor="@color/transparent"
         android:gradientRadius="50%"
         android:startColor="#aaaaaaaa"
         android:type="linear" />
