--- a/features/base/src/main/res/values-night/colors.xml
+++ b/features/base/src/main/res/values-night/colors.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2013-2017 Metin Kale
   ~
@@ -15,12 +14,20 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/delete"
-        android:title="@string/delete"
-        app:materialIcon="delete"
-        app:materialIconColor="@color/background"
-        app:showAsAction="always" />
-</menu>
+<resources>
+
+
+    <color name="colorPrimary">#03a9f4</color>
+    <color name="colorPrimaryDark">#0288d1</color>
+    <color name="accent">#03a9f4</color>
+    <color name="colorPrimaryLight">#d3e5fc</color>
+
+    <color name="foreground">#ffffff</color>
+    <color name="foregroundSecondary">#eeeeee</color>
+    <color name="divider">#bdbdbd</color>
+    <color name="backgroundSecondary">#757575</color>
+    <color name="background">#212121</color>
+
+    <color name="alert">#f44336</color>
+    <color name="transparent">#00000000</color>
+</resources>
