--- a/features/base/src/main/res/values-night/styles.xml
+++ b/features/base/src/main/res/values-night/styles.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2013-2017 Metin Kale
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,12 +14,8 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/delete"
-        android:title="@string/delete"
-        app:materialIcon="delete"
-        app:materialIconColor="@color/background"
-        app:showAsAction="always" />
-</menu>
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:ignore="PxUsage">
+
+    <style name="AppBaseTheme" parent="Theme.AppCompat.NoActionBar" />
+
+</resources>
