--- a/features/calendar/src/main/res/layout/calendar_main.xml
+++ b/features/calendar/src/main/res/layout/calendar_main.xml
@@ -26,6 +26,6 @@
         android:background="@color/colorPrimary"
         android:paddingBottom="4dp"
         android:paddingTop="4dp"
-        android:textColor="#fff" />
+        android:textColor="@color/background" />
 
 </androidx.viewpager.widget.ViewPager>
