--- a/features/compass/src/main/res/layout/compass_map.xml
+++ b/features/compass/src/main/res/layout/compass_map.xml
@@ -32,7 +32,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:src="@drawable/ic_gps"
-        app:backgroundTint="#ff0000"
+        app:backgroundTint="@color/alert"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
