--- a/features/compass/src/main/res/layout/compass_qiblatime.xml
+++ b/features/compass/src/main/res/layout/compass_qiblatime.xml
@@ -36,7 +36,7 @@
         android:layout_height="120dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:background="#ffffff">
+        android:background="@color/background">
 
         <View
             android:id="@+id/center"
@@ -55,7 +55,7 @@
             android:gravity="center"
             android:text="@string/angle"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#707070"
+            android:textColor="@color/foregroundSecondary"
             android:textStyle="bold" />
 
         <TextView
@@ -70,7 +70,7 @@
             android:layout_toLeftOf="@id/center"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#707070" />
+            android:textColor="@color/foregroundSecondary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,7 +82,7 @@
             android:gravity="center"
             android:text="@string/distance"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#707070"
+            android:textColor="@color/foregroundSecondary"
             android:textStyle="bold" />
 
         <TextView
@@ -97,7 +97,7 @@
             android:text="0 km"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#707070" />
+            android:textColor="@color/foregroundSecondary" />
 
 
         <View
@@ -109,7 +109,7 @@
             android:layout_marginStart="5dip"
             android:layout_marginEnd="5dip"
             android:layout_marginTop="5dip"
-            android:background="#33b5e5"
+            android:background="@color/colorPrimary"
             android:layout_above="@+id/angle" />
 
     </RelativeLayout>
