--- a/features/dhikr/src/main/res/layout/dhikr_main.xml
+++ b/features/dhikr/src/main/res/layout/dhikr_main.xml
@@ -18,7 +18,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#e0e0e0"
+    android:background="@color/backgroundSecondary"
     android:orientation="vertical">
 
     <EditText
@@ -29,7 +29,7 @@
         android:gravity="center"
         android:lines="1"
         android:layout_margin="10dp"
-        android:background="#00000000"
+        android:background="@color/transparent"
         android:hint="@string/newDhikr"
         android:text="@string/newDhikr"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -58,7 +58,7 @@
             android:layout_margin="10dp"
             android:contentDescription="@null"
             app:materialIcon="backup_restore"
-            app:materialIconColor="#000000"
+            app:materialIconColor="@color/foreground"
             app:materialIconSize="36dp" />
 
         <com.metinkale.prayer.dhikr.VibrationModeView
