--- a/features/intro/src/main/res/layout/intro_pager.xml
+++ b/features/intro/src/main/res/layout/intro_pager.xml
@@ -28,13 +28,13 @@
         android:padding="20dp"
         android:gravity="center"
         android:text="@string/intro_pager"
-        android:textColor="#ffffff"/>
+        android:textColor="@color/background"/>
 
 
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"
+        android:background="@color/background"
         android:scaleX="0.65"
         android:scaleY="0.65">
 
