--- a/features/names/src/main/res/layout/names_item.xml
+++ b/features/names/src/main/res/layout/names_item.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:background="#ffffff"
+        android:background="@color/background"
         android:orientation="vertical"
         android:padding="20dp"
         android:translationZ="2dp">
@@ -70,7 +70,7 @@
             android:layout_marginStart="5dip"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#707070" />
+            android:textColor="@color/foregroundSecondary" />
 
         <TextView
             android:id="@+id/meaningInvisible"
@@ -82,7 +82,7 @@
             android:layout_marginStart="5dip"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#707070"
+            android:textColor="@color/foregroundSecondary"
             android:visibility="invisible" />
     </RelativeLayout>
 
