--- a/features/times/src/main/res/layout/calcmethod_dlgitem.xml
+++ b/features/times/src/main/res/layout/calcmethod_dlgitem.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="5dp"
-        android:textColor="#444444"
+        android:textColor="@color/foregroundSecondary"
         android:textSize="12sp"
         android:paddingLeft="5dp" />
 
