--- a/features/times/src/main/res/layout/vakit_settings.xml
+++ b/features/times/src/main/res/layout/vakit_settings.xml
@@ -17,7 +17,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#333333"
+    android:background="@color/foreground"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:ems="10"
-            android:textColor="#ffffff" />
+            android:textColor="@color/background" />
 
 
         <LinearLayout
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fixTimezone"
-                android:textColor="#ffffff" />
+                android:textColor="@color/background" />
 
             <View
                 android:layout_width="0dp"
@@ -68,7 +68,7 @@
                 android:contentDescription="@null"
                 app:materialIcon="minus_circle"
                 android:id="@id/minus"
-                app:materialIconColor="#fff"
+                app:materialIconColor="@color/background"
                 app:materialIconSize="40dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -81,7 +81,7 @@
                 android:gravity="center"
                 android:layout_weight="1"
                 android:inputType="number"
-                android:textColor="#ffffff" />
+                android:textColor="@color/background" />
 
             <net.steamcrafted.materialiconlib.MaterialIconView
                 android:contentDescription="@null"
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 app:materialIcon="plus_circle"
                 android:id="@+id/plus"
-                app:materialIconColor="#fff"
+                app:materialIconColor="@color/background"
                 app:materialIconSize="40dp" />
 
 
@@ -128,7 +128,7 @@
                     android:layout_alignBottom="@id/minus"
                     android:layout_alignParentRight="true"
                     app:materialIcon="plus_circle"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp" />
 
                 <EditText
@@ -141,7 +141,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="number"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <TextView
                     android:id="@id/text"
@@ -150,13 +150,13 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:text="@string/fajr"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:contentDescription="@null"
                     app:materialIcon="minus_circle"
                     android:id="@id/minus"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -180,7 +180,7 @@
                     android:layout_alignBottom="@id/minus"
                     android:layout_alignParentRight="true"
                     app:materialIcon="plus_circle"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp" />
 
                 <EditText
@@ -193,7 +193,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="number"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <TextView
                     android:id="@id/text"
@@ -202,13 +202,13 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:text="@string/sun"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:contentDescription="@null"
                     app:materialIcon="minus_circle"
                     android:id="@id/minus"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -232,7 +232,7 @@
                     android:layout_alignBottom="@id/minus"
                     android:layout_alignParentRight="true"
                     app:materialIcon="plus_circle"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp" />
 
                 <EditText
@@ -245,7 +245,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="number"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <TextView
                     android:id="@id/text"
@@ -254,13 +254,13 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:text="@string/zuhr"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:contentDescription="@null"
                     app:materialIcon="minus_circle"
                     android:id="@id/minus"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -283,7 +283,7 @@
                     android:layout_alignBottom="@id/minus"
                     android:layout_alignParentRight="true"
                     app:materialIcon="plus_circle"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp" />
 
                 <EditText
@@ -296,7 +296,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="number"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <TextView
                     android:id="@id/text"
@@ -305,13 +305,13 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:text="@string/asr"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:contentDescription="@null"
                     app:materialIcon="minus_circle"
                     android:id="@id/minus"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -335,7 +335,7 @@
                     android:layout_alignBottom="@id/minus"
                     android:layout_alignParentRight="true"
                     app:materialIcon="plus_circle"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp" />
 
                 <EditText
@@ -348,7 +348,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="number"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <TextView
                     android:id="@id/text"
@@ -357,13 +357,13 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:text="@string/maghrib"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:contentDescription="@null"
                     app:materialIcon="minus_circle"
                     android:id="@id/minus"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -388,7 +388,7 @@
                     android:layout_alignParentRight="true"
                     app:materialIcon="plus_circle"
                     android:id="@id/plus"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp" />
 
                 <EditText
@@ -402,7 +402,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="number"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <TextView
                     android:id="@id/text"
@@ -411,13 +411,13 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:text="@string/ishaa"
-                    android:textColor="#ffffff" />
+                    android:textColor="@color/background" />
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:contentDescription="@null"
                     app:materialIcon="minus_circle"
                     android:id="@id/minus"
-                    app:materialIconColor="#fff"
+                    app:materialIconColor="@color/background"
                     app:materialIconSize="40dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
